fixing overflow, need to add skills/projects

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -5,14 +5,14 @@
   ul {
     padding: 0;
     margin: 0;
-    top: 30rem;
+    top: 25rem;
 
     li {
       padding: 0;
       margin: 0;
       list-style: none;
       margin-bottom: 10px;
-      overflow: hidden;
+      overflow: auto;
       display: block;
       position: relative;
       opacity: 0;
